# smarthome

./: .gitmodules
execute/: exec.h
home_data_logger/: CMakeLists.txt
home_data_logger/arduino/playground/loghome/: car_motion.h  color_manager.h  common_types.h  dashboard.h  flash.sh  gauge.h  led_gauge.h  loghome.ino  mean_var_data.h  my_color.h  serial_outputer.h
home_data_logger/arduino/playground/loghome/calibration/accelerameter_calib/: data.txt  getError.m  main.m
home_data_logger/arduino/playground/loghome/tests/: test_led_gauge.cpp  test_mean_var_data.cpp
home_data_logger/include/: sensor_reader.hpp
home_data_logger/octave/: plot_sensor_data.m  serial_logger.m  serial_logger_backup.m
home_data_logger/processing/serial_reader_example/: serial_reader_example.pde
home_data_logger/processing/temp_vis/: Particle.pde  ParticleSystem.pde  SimplePlot.pde  temp_vis.pde
home_data_logger/src/: all_sensor_data_handler  all_sensor_data_handler.cpp  arduino_udp_broadcaster  arduino_udp_broadcaster.cpp  light_control.cpp  main.cpp  plot_data.m  read_sensor_main.cpp  trailing_smoother.hpp  udp_broadcaster
network/: MyClient.java  MyServer.java  client  client.cpp  server  server.cpp
network/udp_broadcast/: receiver  receiver.cpp  sender  sender.cpp
notification/: android_sms.sh
web_watcher/: .web_watcher.cpp.swp  config.txt  test.txt  web_watcher  web_watcher.cpp
